--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,11 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+.fvm/flutter_sdk
+.fvm/fvm_config.json
+.gitignore
+ios/firebase_app_id_file.json
+android/app/google-services.json
+.gitignore
+.gitignore
+lib/firebase_options.dart
